Crosswords only show complete notification box, and main notification takes up space when not showing anything to prevent continual resizing of the page

--- a/public_html/stylesheets/crosswords.css
+++ b/public_html/stylesheets/crosswords.css
@@ -36,6 +36,7 @@ div.crosswordAjaxNotify {
 	margin-left: 30%;
 	margin-right: 30%;
 	min-height: 32px;
+	border: 1px solid white;
 	padding-left: 34px;
 
 	text-align: center;
